Bug 574170 - Add coloring to the stack frames of the debug thread view
and add an action to enable/disable colorization from the context menu.
  All of the categorize can be switched on or off
Add a couple of tests for stack frame grouping.